extended print production to accommodate all additional materials and fixed a typo in the production edit for productionqty 13

--- a/src/main/webapp/Protected/Pages/Users/PrintProduction.xhtml
+++ b/src/main/webapp/Protected/Pages/Users/PrintProduction.xhtml
@@ -103,11 +103,14 @@
                         <th><h:outputText value="#{productionEditBean.production.productcode16}"/></th>
                         <th><h:outputText value="#{productionEditBean.production.productcode17}"/></th>
                         <th><h:outputText value="#{productionEditBean.production.productcode18}"/></th>
-                        <th><h:outputText value="#{productionEditBean.production.productcode19}"/></th>
-                        <th><h:outputText value="#{productionEditBean.production.productcode20}"/></th>
                         <th><h:outputText value="#{productionEditBean.production.addcode1}"/></th>
                         <th><h:outputText value="#{productionEditBean.production.addcode2}"/></th>
                         <th><h:outputText value="#{productionEditBean.production.addcode3}"/></th>
+                        <th><h:outputText value="#{productionEditBean.production.addcode4}"/></th>
+                        <th><h:outputText value="#{productionEditBean.production.addcode5}"/></th>
+                        <th><h:outputText value="#{productionEditBean.production.addcode6}"/></th>
+                        <th><h:outputText value="#{productionEditBean.production.addcode7}"/></th>
+                        <th><h:outputText value="#{productionEditBean.production.addcode8}"/></th>                        
                         <th style="text-align:center"><b>COST</b></th>
                     </tr>
                     <tr>
@@ -132,6 +135,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -175,6 +181,9 @@
                         <td><h:outputText value="#{productionEditBean.production.productionqty2}"/></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -221,6 +230,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -270,6 +282,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -310,6 +325,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -362,6 +380,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -409,6 +430,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td>ACTUAL | </td>
                     </tr>
                     <tr>
@@ -440,6 +464,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -493,6 +520,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td>RMCC STD | <h:outputText value="#{productionEditBean.production.actualqty3}"/></td>
@@ -529,6 +559,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -576,6 +609,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -615,6 +651,9 @@
                         <td><h:outputText value="#{productionEditBean.production.productionqty12}"/></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -658,6 +697,9 @@
                         <td></td>
                         <td><h:outputText value="#{productionEditBean.production.productionqty13}"/></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -709,6 +751,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td>VISCOSITY | </td>
                     </tr>
@@ -746,6 +791,9 @@
                         <td></td>
                         <td><h:outputText value="#{productionEditBean.production.productionqty15}"/></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -793,6 +841,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -835,6 +886,9 @@
                         <td><h:outputText value="#{productionEditBean.production.productionqty17}"/></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -880,6 +934,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td>OPACITY | </td>
@@ -920,8 +977,11 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><h:outputText value="#{productionEditBean.production.productionqty19}"/></td>
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty1}"/></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td></td>
@@ -964,8 +1024,11 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><h:outputText value="#{productionEditBean.production.productionqty20}"/></td>
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty2}"/></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                         <td>FLOAT | </td>
@@ -1008,8 +1071,11 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><h:outputText value="#{productionEditBean.production.addprodqty1}"/></td>
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty3}"/></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td>DISPERSION | </td>
                     </tr> 
@@ -1052,7 +1118,56 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><h:outputText value="#{productionEditBean.production.addprodqty2}"/></td>
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty4}"/></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
+                        <td></td>
+                    </tr>
+                    <tr>
+                      <td>
+                            <select>
+                                <option></option>
+                                <option>Add To Mixer</option>
+                                <option>Mix And Add</option>
+                                <option>Dissolve Completely And Add</option>
+                                <option>Mix And Tint</option>
+                                <option>Run For 5mins And Add</option>
+                                <option>Run For 30mins And Add</option>
+                                <option>Add To Attrictor</option>
+                                <option>Run For 1 Hour</option>
+                                <option>Run For 1 Hour 30mins</option>
+                                <option>Run For 3 Hours</option>
+                                <option>Drop Out With</option>
+                                <option>Add And Stabilize With</option>
+                          </select>                         
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty5}"/></td>
+                        <td></td>                        
+                        <td></td>
                         <td></td>
                         <td></td>
                     </tr> 
@@ -1096,7 +1211,102 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><h:outputText value="#{productionEditBean.production.addprodqty3}"/></td>
+                        <td></td>
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty6}"/></td>                        
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr> 
+                    <tr>
+                      <td>
+                            <select>
+                                <option></option>
+                                <option>Add To Mixer</option>
+                                <option>Mix And Add</option>
+                                <option>Dissolve Completely And Add</option>
+                                <option>Mix And Tint</option>
+                                <option>Run For 5mins And Add</option>
+                                <option>Run For 30mins And Add</option>
+                                <option>Add To Attrictor</option>
+                                <option>Run For 1 Hour</option>
+                                <option>Run For 1 Hour 30mins</option>
+                                <option>Run For 3 Hours</option>
+                                <option>Drop Out With</option>
+                                <option>Add And Stabilize With</option>
+                          </select>                         
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty7}"/></td>
+                        <td></td>
+                        <td></td>
+                    </tr>                     
+                    <tr>
+                      <td>
+                            <select>
+                                <option></option>
+                                <option>Add To Mixer</option>
+                                <option>Mix And Add</option>
+                                <option>Dissolve Completely And Add</option>
+                                <option>Mix And Tint</option>
+                                <option>Run For 5mins And Add</option>
+                                <option>Run For 30mins And Add</option>
+                                <option>Add To Attrictor</option>
+                                <option>Run For 1 Hour</option>
+                                <option>Run For 1 Hour 30mins</option>
+                                <option>Run For 3 Hours</option>
+                                <option>Drop Out With</option>
+                                <option>Add And Stabilize With</option>
+                          </select>                         
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
+                        <td><h:outputText value="#{productionEditBean.production.addprodqty8}"/></td>
                         <td><b>TOTAL</b> | <h:outputText value="#{productionEditBean.production.actualqty1}"><f:convertNumber type="currency" currencySymbol="₦"/></h:outputText></td>
                     </tr>                     
                 </table>
